// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots routes/user/Profile default 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <div
    class="generic-view-container  p-12 p-sm-10 p-md-10 p-xl-8 p-d-flex p-flex-column p-as-center p-mx-auto"
  >
    <div
      class="lck-color-page-title p-my-4"
    >
      <h1>
        Mon compte
      </h1>
    </div>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user"
              />
            </span>
             Mon profil
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        Aucune donnée à afficher
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-users"
              />
            </span>
             Mes groupes
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        Aucune donnée à afficher
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user-edit"
              />
            </span>
             Mettre à jour mon compte
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            <div
              class="p-field p-grid p-mb-3"
            >
              <label
                class="p-col p-md-3"
                for="oldPassword"
              >
                
            Ancien mot de passe
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="oldPassword"
                  type="password"
                />
              </div>
            </div>
             
            <div
              class="p-field p-grid p-mb-3"
            >
              <label
                class="p-col p-md-3"
                for="password"
              >
                
            Nouveau mot de passe
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="password"
                  type="password"
                />
              </div>
            </div>
             
            <div
              class="p-field p-grid"
            >
              <label
                class="p-col p-md-3"
                for="passwordCheck"
              >
                
            Mot de passe (vérification)
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="passwordCheck"
                  type="password"
                />
              </div>
            </div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="p-card-footer"
          >
            <div
              class="p-field p-grid p-jc-end"
            >
              <div
                class="p-col p-md-3"
              >
                <button
                  class="p-button-primary p-button p-component"
                  disabled="disabled"
                  type="button"
                >
                  <span
                    class="pi pi-check-circle p-button-icon p-button-icon-left"
                  />
                   
                  <span
                    class="p-button-label"
                  >
                    Valider
                  </span>
                   
                  <!---->
                  <span
                    class="p-ink"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`storyshots routes/user/Profile with auth user 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <div
    class="generic-view-container  p-12 p-sm-10 p-md-10 p-xl-8 p-d-flex p-flex-column p-as-center p-mx-auto"
  >
    <div
      class="lck-color-page-title p-my-4"
    >
      <h1>
        Mon compte
      </h1>
    </div>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user"
              />
            </span>
             Mon profil
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        Aucune donnée à afficher
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-users"
              />
            </span>
             Mes groupes
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        Aucune donnée à afficher
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user-edit"
              />
            </span>
             Mettre à jour mon compte
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            <div
              class="p-field p-grid p-mb-3"
            >
              <label
                class="p-col p-md-3"
                for="oldPassword"
              >
                
            Ancien mot de passe
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="oldPassword"
                  type="password"
                />
              </div>
            </div>
             
            <div
              class="p-field p-grid p-mb-3"
            >
              <label
                class="p-col p-md-3"
                for="password"
              >
                
            Nouveau mot de passe
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="password"
                  type="password"
                />
              </div>
            </div>
             
            <div
              class="p-field p-grid"
            >
              <label
                class="p-col p-md-3"
                for="passwordCheck"
              >
                
            Mot de passe (vérification)
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="passwordCheck"
                  type="password"
                />
              </div>
            </div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="p-card-footer"
          >
            <div
              class="p-field p-grid p-jc-end"
            >
              <div
                class="p-col p-md-3"
              >
                <button
                  class="p-button-primary p-button p-component"
                  disabled="disabled"
                  type="button"
                >
                  <span
                    class="pi pi-check-circle p-button-icon p-button-icon-left"
                  />
                   
                  <span
                    class="p-button-label"
                  >
                    Valider
                  </span>
                   
                  <!---->
                  <span
                    class="p-ink"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`storyshots routes/user/Profile with auth user and groups 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <div
    class="generic-view-container  p-12 p-sm-10 p-md-10 p-xl-8 p-d-flex p-flex-column p-as-center p-mx-auto"
  >
    <div
      class="lck-color-page-title p-my-4"
    >
      <h1>
        Mon compte
      </h1>
    </div>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user"
              />
            </span>
             Mon profil
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            <h4>
              Mathieu DARTIGUES
            </h4>
             
            <strong>
              E-mail : 
            </strong>
            mathieu.dartigues@makina-corpus.com
        
            <br />
             
            <strong>
              Rôle : 
            </strong>
            SUPERADMIN
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-users"
              />
            </span>
             Mes groupes
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        Aucune donnée à afficher
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user-edit"
              />
            </span>
             Mettre à jour mon compte
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            <div
              class="p-field p-grid p-mb-3"
            >
              <label
                class="p-col p-md-3"
                for="oldPassword"
              >
                
            Ancien mot de passe
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="oldPassword"
                  type="password"
                />
              </div>
            </div>
             
            <div
              class="p-field p-grid p-mb-3"
            >
              <label
                class="p-col p-md-3"
                for="password"
              >
                
            Nouveau mot de passe
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="password"
                  type="password"
                />
              </div>
            </div>
             
            <div
              class="p-field p-grid"
            >
              <label
                class="p-col p-md-3"
                for="passwordCheck"
              >
                
            Mot de passe (vérification)
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="passwordCheck"
                  type="password"
                />
              </div>
            </div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="p-card-footer"
          >
            <div
              class="p-field p-grid p-jc-end"
            >
              <div
                class="p-col p-md-3"
              >
                <button
                  class="p-button-primary p-button p-component"
                  disabled="disabled"
                  type="button"
                >
                  <span
                    class="pi pi-check-circle p-button-icon p-button-icon-left"
                  />
                   
                  <span
                    class="p-button-label"
                  >
                    Valider
                  </span>
                   
                  <!---->
                  <span
                    class="p-ink"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
